<resources>
    <string name="app_name">OnlineStore</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="create_product">Create Product</string>
    <string name="description">Description</string>
    <string name="add_variant">Add Variant</string>

</resources>